--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,9 @@ jobs:
     - name: Check out this repo
       uses: actions/checkout@v2
     - name: Fetch latest data
-      run: |-
-        curl https://www.toronto.ca/data/fire/livecad.xml > incidents.xml
+      run:
+      - curl https://www.toronto.ca/data/fire/livecad.xml > livecad.xml
+      - xmllint livecad.xml --format > incidents.xml
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
